--- a/turbo/generators/templates/package.json.hbs
+++ b/turbo/generators/templates/package.json.hbs
@@ -1,5 +1,5 @@
 {
-  "name": "@acme/{{ name }}",
+  "name": "@soulmate/{{ name }}",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -14,12 +14,12 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@acme/eslint-config": "workspace:*",
-    "@acme/prettier-config": "workspace:*",
-    "@acme/tsconfig": "workspace:*",
+    "@soulmate/eslint-config": "workspace:*",
+    "@soulmate/prettier-config": "workspace:*",
+    "@soulmate/tsconfig": "workspace:*",
     "eslint": "^9.0.0",
     "prettier": "^3.2.5",
     "typescript": "^5.4.3"
   },
-  "prettier": "@acme/prettier-config"
+  "prettier": "@soulmate/prettier-config"
 }
